--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
 
 /* Menú de navegación */
 nav {
-    background-color: #ff6666; /* Fondo rojo claro que combina con los marcos */
+    background-color: #ff6666; /* Fondo rojo claro */
     color: white;
     text-align: center;
     position: sticky;
